tests/NormalTests/paczka1/small_fuzzy/96696068.err
Error in line 1: A478 S15 71,3
Error in line 7: SS\ S15 35,5
Error in line 9: 4Z9dYHkQS15Q70,0
